update & now use Shenandoah gc