@@ -1,15 +1,15 @@
 CURDIR=$(cd $(dirname $0); pwd )
 cd $CURDIR
 
-JExec=java
+JExec="$JAVA_HOME/bin/java"
 
 PaperJAR=$(echo ./paper-1.20.*-*.jar)
 
-ExtJAVAargs='-XX:+UseZGC -XX:+ZGenerational'
+ExtJAVAargs='-XX:+UseShenandoahGC'
 
 LPaper() {
 
-$JExec \
+"$JExec" \
 	$ExtJAVAargs \
 	-DPaper.IgnoreJavaVersion=true \
 	-jar  "$PaperJAR"\
